--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "filed",
+  "name": "filed-mimefix",
   "description": "Simplified file library.",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mikeal/filed.git"
+    "url": "git://github.com/andreialecu/filed.git"
   },
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com>",
   "engines": {
@@ -12,7 +12,7 @@
   },
   "license": "ASL 2.0",
   "dependencies": {
-    "mime": ">= 1.2.6"
+    "mime": "^1.4.0"
   },
   "scripts": {
     "test": "node test/test.js"
